# python-learning-lab

./: .gitignore  Makefile  README.md  [Start]_R2DE_3_Chapter_2_Data_Cleansing_with_Apache_Spark.ipynb  pyproject.toml  pytest.ini
bmi-calculate/: main.py
hangmain-game/: main.py
langchain/: 01_document_loading.ipynb
machine_learning/: data_processing_tool.ipynb
mlartifacts/678085894026883048/9bd346242b2e43c1b37be09241790c57/artifacts/iris_model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlflow/: app.ipynb
quiz-game/: main.py  quiz_brain.py
quiz-game/questions/: common_knowledge_questions_set_1.json  common_knowledge_questions_set_2.json  common_knowledge_questions_set_3.json
snake-game/: app.py
streamlit-lab/: app.py
text_to_speech/: get_started.ipynb  main.py  text_generation.py  text_processing.py  text_to_speech.py
turtle_graphic/: main.py
