[tool.poetry]
name = "python-learning-lab"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Ittichai Boonyarakthunya <i.boonyarakthunya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = ">=1.4,<2.0"
transformers = "^4.43.3"
torch = "^2.4.0"
pythainlp = "^5.0.4"
google-cloud-texttospeech = "^2.16.5"
pydub = "^0.25.1"
tts = "^0.22.0"
sentencepiece = "^0.2.0"
numpy = "1.21.5"  # Change numpy to a version that is compatible with librosa
scipy = "^1.14.0"
librosa = "^0.9.2"  # Use an older version of librosa compatible with numpy 1.21.5
unidecode = "^1.3.8"
inflect = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
