[tool.poetry]
name = "python-learning-lab"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Ittichai Boonyarakthunya <i.boonyarakthunya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = ">=1.4,<2.0"
transformers = "^4.43.3"
torch = "^2.4.0"
pythainlp = "^5.0.4"
google-cloud-texttospeech = "^2.16.5"
pydub = "^0.25.1"
sentencepiece = "^0.2.0"
tts = "^0.22.0"
numpy = "^1.21.0"
unidecode = "^1.3.8"
inflect = "^7.3.1"
scipy = "^1.11.2"
pytest = "^8.3.2"
pylint = "^3.2.6"
matplotlib = "^3.5.3"
mlflow = "^2.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
